# embedded

./: .gitignore  pyproject.toml
embedded/: __init__.py  cli.py  compiler.py
embedded/cpu/: __init__.py  arm.py  riscv.py
embedded/microcontroller/: __init__.py
